Row and gap fix

--- a/assets/section-main-blog.css
+++ b/assets/section-main-blog.css
@@ -1,8 +1,8 @@
 .blog-articles {
   display: grid;
   grid-gap: 1rem;
-  column-gap: var(--grid-mobile-horizontal-spacing);
-  row-gap: var(--grid-mobile-vertical-spacing);
+  column-gap: 55px;
+  row-gap: 55px;
   padding: 150px 0;
 }
 
